--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/projeto_livraria_db?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=QTU123v!
+spring.datasource.password=senha
 
 spring.banner.location=classpath:banner.txt
 
